# pico_ex

./: README.md  make_build.bat  memo.txt
all_in_one/: CMakeLists.txt
all_in_one/src/: CMakeLists.txt  cap_meter.cpp  cap_meter.h  cli.cpp  cli.h  ina226.cpp  ina226.h  led.cpp  led.h  led.pio  macro.h  main.cpp  pwm.cpp  pwm.h  sched.cpp  sched.h  sched_conf.h  ssd1306.cpp  ssd1306.h  types.h  ws2812.cpp  ws2812.h  ws2812.pio
blink/src/: CMakeLists.txt  blink.pio  blink_good.pio  main.cpp
pwm/: CMakeLists.txt
pwm/src/: CMakeLists.txt  main.cpp
spi/: CMakeLists.txt
spi/src/: CMakeLists.txt  flash.cpp  flash.h  main.cpp  qspi.txt  spi.pio  spi_hw.cpp  spi_hw.h
spi_flash/src/: flash.cpp  main.cpp  spi.pio
usb_kbd/: CMakeLists.txt
usb_kbd/src/: CMakeLists.txt  board.c  board.h  kbd.c  kbd.h  main.c  tud_if.c  tud_if.h  tusb_config.h  usb_cdc.c  usb_cdc.h  usb_desc.c  usb_desc.h  usb_hid.c  usb_hid.h
ws2812/: CMakeLists.txt
ws2812/src/: CMakeLists.txt  main.cpp  ws2812.pio
